--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,7 +21,6 @@ variables:
   vmImageName: 'ubuntu-latest'
  
 
-
 stages:
 - stage: Build
   displayName: Build and push stage
@@ -58,7 +57,7 @@ stages:
           - task: CmdLine@2
             displayName: Stop Current Container
             inputs:
-              script: 'docker rm -f  bootapp || true'
+              script: 'docker rm -f  myapp || true'
           - task: Docker@2
             displayName: 'Login to Registry'
             inputs:
@@ -75,7 +74,7 @@ stages:
           - task: Bash@3
             inputs:
              targetType: 'inline'
-             script: 'docker run --restart=always  -d --name bootapp -p 8080:8080 -e PGHOST=$(PGHOST)   -e PORT=8080    -e  HOST=0.0.0.0  -e PGUSERNAME=$(PGUSERNAME)  -e PGDATABASE=postgres   -e  PGPASSWORD=$(PGPASSWORD)  -e  PGPORT=5432   -e HOST_URLL=$(HOST_URL)   -e COOKIE_ENCRYPT_PWD=$(COOKIE_ENCRYPT_PWD)   -e  NODE_ENV=development   -e  OKTA_ORG_URL=$(OKTA_ORG_URL)   -e  OKTA_CLIENT_ID=$(OKTA_CLIENT_ID)   -e OKTA_CLIENT_SECRET=$(OKTA_CLIENT_SECRET)  $(containerRegistry)/$(imageRepository):$(tag)'
+             script: 'docker run --restart=always  -d --name myapp -p 8080:8080 -e PGHOST=$(PGHOST)   -e PORT=8080    -e  HOST=0.0.0.0  -e PGUSERNAME=$(PGUSERNAME)  -e PGDATABASE=postgres   -e  PGPASSWORD=$(PGPASSWORD)  -e  PGPORT=5432   -e HOST_URLL=$(HOST_URL)   -e COOKIE_ENCRYPT_PWD=$(COOKIE_ENCRYPT_PWD)   -e  NODE_ENV=development   -e  OKTA_ORG_URL=$(OKTA_ORG_URL)   -e  OKTA_CLIENT_ID=$(OKTA_CLIENT_ID)   -e OKTA_CLIENT_SECRET=$(OKTA_CLIENT_SECRET)  $(containerRegistry)/$(imageRepository):$(tag)'
 
 
 
@@ -95,7 +94,7 @@ stages:
           - task: CmdLine@2
             displayName: Stop Current Container
             inputs:
-              script: 'docker rm -f  bootapp || true'
+              script: 'docker rm -f  myapp || true'
           - task: Docker@2
             displayName: 'Login to Registry'
             inputs:
@@ -111,5 +110,5 @@ stages:
           - task: Bash@3
             inputs:
              targetType: 'inline'
-             script: 'docker run --restart=always  -d --name bootapp -p 8080:8080 -e PGHOST=$(PGHOSTT)   -e PORT=8080    -e  HOST=0.0.0.0  -e PGUSERNAME=$(PGUSERNAMEE)  -e PGDATABASE=postgres   -e  PGPASSWORD=$(PGPASSWORD)  -e  PGPORT=5432   -e HOST_URLL=$(HOST_URLL)   -e COOKIE_ENCRYPT_PWD=$(COOKIE_ENCRYPT_PWD)   -e  NODE_ENV=development   -e  OKTA_ORG_URL=$(OKTA_ORG_URL)   -e  OKTA_CLIENT_ID=$(OKTA_CLIENT_ID)   -e OKTA_CLIENT_SECRET=$(OKTA_CLIENT_SECRET)  $(containerRegistry)/$(imageRepository):$(tag)'
+             script: 'docker run --restart=always  -d --name myapp -p 8080:8080 -e PGHOST=$(PRODHOST)   -e PORT=8080    -e  HOST=0.0.0.0  -e PGUSERNAME=$(PRODUSER)  -e PGDATABASE=postgres   -e  PGPASSWORD=$(PGPASSWORD)  -e  PGPORT=5432   -e HOST_URLL=$(HOST)   -e COOKIE_ENCRYPT_PWD=$(COOKIE_ENCRYPT_PWD)   -e  NODE_ENV=development   -e  OKTA_ORG_URL=$(OKTA_ORG_URL)   -e  OKTA_CLIENT_ID=$(OKTA_CLIENT_ID)   -e OKTA_CLIENT_SECRET=$(OKTA_CLIENT_SECRET)  $(containerRegistry)/$(imageRepository):$(tag)'
 
